Prevent ryu div overflow

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ body {
 }
 
 .ryu {
+	overflow: hidden;
 	float: left;
 	width: 659px;
 	height: 494px;
